word wrap in table fixed

--- a/Backend/catering.MVC/catering.MVC/wwwroot/css/admin-dashboard.css
+++ b/Backend/catering.MVC/catering.MVC/wwwroot/css/admin-dashboard.css
@@ -174,6 +174,7 @@ td {
     overflow: hidden;
     text-overflow: ellipsis;
     min-width: 165px;
+    word-wrap: break-word;
 }
 
 th {
