--- a/Backend/catering.MVC/catering.MVC/wwwroot/css/user-dashboard.css
+++ b/Backend/catering.MVC/catering.MVC/wwwroot/css/user-dashboard.css
@@ -287,6 +287,7 @@ td {
     text-overflow: ellipsis;
     width: 22vh;
     max-width: 22vh;
+    word-wrap: break-word;
 }
 
 th {
